fix(flex): Add missing "content-stretch" CSS class

--- a/src/css/core/flex.styl
+++ b/src/css/core/flex.styl
@@ -87,6 +87,8 @@ for $name, $size in $sizes
     align-content flex-end
   &center
     align-content center
+  &stretch
+    align-content stretch
   &between
     align-content space-between
   &around
